# memo-app

./: .gitignore  README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: ARCHITECTURE.md  ISSUES.md  PLAN.md  QUICKSTART.md  SPEC_CUSTOM_FONTS.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/components/: Layout.tsx  MarkdownEditor.tsx  MemoList.tsx  SettingsDialog.tsx  Sidebar.tsx  Toast.tsx
src/hooks/: useAutoSave.ts  useFontLoader.ts  useMemos.ts
src/stores/: memoStore.ts  settingsStore.ts  toastStore.ts
src/tauri/: commands.ts
src/types/: font.ts  memo.ts
